; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_inode.c_pohmelfs_write_inode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/pohmelfs/extr_inode.c_pohmelfs_write_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.pohmelfs_inode = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, i32)* @pohmelfs_write_inode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pohmelfs_write_inode(%struct.inode* %0, i32 %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pohmelfs_inode*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.inode*, %struct.inode** %3, align 8
  %7 = call %struct.pohmelfs_inode* @POHMELFS_I(%struct.inode* %6)
  store %struct.pohmelfs_inode* %7, %struct.pohmelfs_inode** %5, align 8
  %8 = load %struct.pohmelfs_inode*, %struct.pohmelfs_inode** %5, align 8
  %9 = call i32 @pohmelfs_write_create_inode(%struct.pohmelfs_inode* %8)
  %10 = load %struct.inode*, %struct.inode** %3, align 8
  %11 = call i32 @pohmelfs_write_inode_create_children(%struct.inode* %10)
  ret i32 0
}

declare dso_local %struct.pohmelfs_inode* @POHMELFS_I(%struct.inode*) #1

declare dso_local i32 @pohmelfs_write_create_inode(%struct.pohmelfs_inode*) #1

declare dso_local i32 @pohmelfs_write_inode_create_children(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
